js/src/tests/test262/built-ins/NativeErrors/TypeError/is-a-constructor.js
assert
.
sameValue
(
isConstructor
(
TypeError
)
true
'
isConstructor
(
TypeError
)
must
return
true
'
)
;
new
TypeError
(
)
;
reportCompare
(
0
0
)
;
